--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Msebeyenjabulo Magubane | WDD 130</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a> 
+            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Msebeyenjabulo Magubane | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Msebeyenjabulo" width="200">
+        <p>Hey there, my name is Msebeyenjabulo and I am from South Africa. I'm new to the programming game, but i'm ready for the challenge. Outside of coding, you can catch me on a run, reading a book or learning something new.</p>
+    </main>
+    <footer>
+        <p>©️2024 | Msebeyenjabulo Magubane | South Africa</p>
+    </footer>
 </body>
 </html>
