--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Msebeyenjabulo Magubane | WDD 130</title>
 </head>
+<link rel="stylesheet" href="styles/styles.css"
 <body>
     <header>
         <nav>
