--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Msebeyenjabulo Magubane | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<link rel="stylesheet" href="styles/styles.css"
 <body>
     <header>
         <nav>
