enhancing home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Msebeyenjabulo Magubane | WDD 130</title>
+    <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting Site Plan">
+    <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -19,6 +21,11 @@
         <img src="images/profile.jpg" alt="Msebeyenjabulo" width="200">
         <p>Hey there, my name is Msebeyenjabulo and I am from South Africa. I'm new to the programming game, but i'm ready for the challenge. Outside of coding, you can catch me on a run, reading a book or learning something new.</p>
     </main>
+    <aside>
+        <h2>South Africa</h2>
+        <img src="images/southafrica.jpg" alt="Proud South Africans Waving the South African Flag">
+        <p>South Africa is a country located at the southern tip of the southern continent. It is known for its diverse culture, stunning natural beauty, and complex history.</p>
+    </aside>
     <footer>
         <p>©️2024 | Msebeyenjabulo Magubane | South Africa</p>
     </footer>
