--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a> 
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://linkedin.com">Linkedin</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Msebeyenjabulo Magubane | WDD 130</h1>
         <img src="images/profile.jpg" alt="Msebeyenjabulo" width="200">
-        <p>Hey there, my name is Msebeyenjabulo and I am from South Africa. I'm new to the programming game, but i'm ready for the challenge. Outside of coding, you can catch me on a run, reading a book or learning something new.</p>
+        <p>Hey there, my name is Msebeyenjabulo and I am from South Africa. I'm new to the programming game, but i'm ready for the challenge. Outside of coding, you can catch me on a run, reading a book or learning something new. In addition to my hobbies, I've also had the unique experience of attending Brigham Young University. It's been fascinating to learn more about the Church of Jesus Christ of Latter-day Saints and to be surrounded by people with different perspectives and beliefs. Attending BYU has been an eye-opening experience for me, as someone who has had a complex and evolving relationship with religion. While I'm not a member of the church yet, I've found the people here to be very warm, loving and welcoming, and I've enjoyed learning more about their faith.  Attending BYU has been a great opportunity to step outside of my comfort zone and explore different ideas and ways of thinking. While I'm not sure where my spiritual journey will take me, I'm grateful for the chance to learn and grow alongside such a diverse and supportive community.</p>
+        <p></p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/durban-south-africa-temple?lang=eng" target="_blank">Durban South Africa Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple?lang=eng" target="_blank"> Paris France Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng" target="_blank">Accra Ghana Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>South Africa</h2>
         <img src="images/southafrica.jpg" alt="Proud South Africans Waving the South African Flag">
         <p>South Africa is a country located at the southern tip of the southern continent. It is known for its diverse culture, stunning natural beauty, and complex history.</p>
@@ -30,4 +38,5 @@
         <p>©️2024 | Msebeyenjabulo Magubane | South Africa</p>
     </footer>
 </body>
+<!-- 09 May 2024 -->
 </html>
