--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting About Page">
+    <meta name="author" content="Msebeyenjabulo Magubane">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <img src="images/rafting-div-background.jpg" alt="The rafting Club Employees" width="600">
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href=" trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
     <main>
