--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
         <img src="images/logo.png" alt="Rafting Site Logo">
             <h1>The Rafting Club</h1>
             <article>
-                <img src="images/rafting5_1024.jpg" alt="Happy clients rafting with employees" width="">
+                <img src="images/rafting5_1024.jpg" alt="Happy clients rafting with employees">
                 <p>Welcome to The Rafting Club, where we believe that whitewater rafting is more than just a thrilling activity—it's an opportunity to connect with nature, challenge yourself, and create lifelong memories with friends and family.     At The Rafting Club, our mission is to offer top-notch rafting experiences. We strive to be the preferred choice for thrill-seekers and nature lovers alike, providing a safe and supportive environment that encourages fun and a deep appreciation for the outdoors.</p>
             </article>
         </div>
@@ -44,13 +44,13 @@
         <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="images/BW_Facebook_ Icon_glyph_svg-64.webp" alt="Facebook">
+                    <img src="images/BW_Facebook_Icon_glyph_svg-64.webp" alt="Facebook">
                 </a>
                 <a href="https://instagram.com">
                     <img src="images/Circled_Instagram_Icon_svg-64.webp" alt="instagram">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="images/Twiiter_X_ Icon-64.webp" alt="Twitter">
+                    <img src="images/Twiiter_X_Icon-64.webp" alt="Twitter">
                 </a>
             </nav>
     </footer>
