about page edit_003

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <title>About Us</title>
     <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting About Page">
     <meta name="author" content="Msebeyenjabulo Magubane">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
