--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Msebeyenjabulo Magubane | WDD 130</h1>
         <img src="images/profile.jpg" alt="Msebeyenjabulo" width="200">
@@ -36,6 +37,7 @@
         <img src="images/southafrica.jpg" alt="Proud South Africans Waving the South African Flag">
         <p>South Africa is a country located at the southern tip of the southern continent. It is known for its diverse culture, stunning natural beauty, and complex history.</p>
     </aside>
+    </div>
     <footer>
         <p>©️2024 | Msebeyenjabulo Magubane | South Africa</p>
     </footer>
