--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="images/southafrica.jpg" alt="Proud South Africans Waving the South African Flag">
         <p>South Africa is a country located at the southern tip of the southern continent. It is known for its diverse culture, stunning natural beauty, and complex history.</p>
     </aside>
-    </div>
+    </grid>
     <footer>
         <p>©️2024 | Msebeyenjabulo Magubane | South Africa</p>
     </footer>
