--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,6 +1,6 @@
 <!-- <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
@@ -55,7 +55,7 @@
                 </a>
             </nav>
     </footer>
-</body>
+    </body>
 </html> -->
 
 <!DOCTYPE html>
@@ -63,14 +63,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>The Rafting Club - About Us</title>
+    <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting About Page">
+    <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header-container">
-        <div class="logo">
-            <img src="images/logo.png" alt="Rafting Site Logo">
-        </div>
+        <img src="images/logo.png" alt="Rafting Site Logo" class="logo">
+        <h1>The Rafting Club</h1>
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -78,10 +79,9 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-    <main class="grid-container">
+    <main>
         <div class="hero">
             <img src="images/rafting-div-background.jpg" alt="The rafting Club Employees" width="600">
-            <h1>The Rafting Club</h1>
             <article>
                 <img src="images/rafting5_1024.jpg" alt="Happy clients rafting with employees">
                 <p>Welcome to The Rafting Club, where we believe that whitewater rafting is more than just a thrilling activity—it's an opportunity to connect with nature, challenge yourself, and create lifelong memories with friends and family. At The Rafting Club, our mission is to offer top-notch rafting experiences. We strive to be the preferred choice for thrill-seekers and nature lovers alike, providing a safe and supportive environment that encourages fun and a deep appreciation for the outdoors.</p>
@@ -93,11 +93,26 @@
         </section>
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting55_1024.jpg" alt="Rafters rafting in a blue watered river" width="200">
-            <img src="images/rafting11_1024.jpg" alt="Rafters rafting in calm waters" width="200">
-            <img src="images/rafting53_600.jpg" alt="A group of rafters rafting through a strong river" width="200">
-            <img src="images/rafting34_1024.jpg" alt="A group of rafters rafting past a forest " width="200">
-            <img src="images/rafting7_600.jpg" alt="Kids rafting with our team" width="200">
+            <figure>
+                <img src="images/rafting55_1024.jpg" alt="Rafters rafting in a blue watered river" width="200">
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting11_1024.jpg" alt="Rafters rafting in calm waters" width="200">
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting53_600.jpg" alt="A group of rafters rafting through a strong river" width="200">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting34_1024.jpg" alt="A group of rafters rafting past a forest" width="200">
+                <figcaption>Forest Run</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting7_600.jpg" alt="Kids rafting with our team" width="200">
+                <figcaption>Family Fun</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
