--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -13,13 +13,18 @@
     <form>
         <fieldset>
             <legend>Contact Information</legend> 
-            <label for="fullname">Full Name:</label>
-            <input type="text" id="fullname" name="fullname">
+            <div class="form-item">
+              <label for="fullname">Full Name:</label>
+              <input type="text" id="fullname" name="fullname">  
+            </div>
+            <div class="form-item column2">
             <label for="usermail">Email:</label>
             <input type="email" id="usermail" name="useremail">
+            </div>
         </fieldset>
        <fieldset>
             <legend>Questions</legend>
+            <div class="column1">
             <label for="browser">What is your favourite internet browser?</label>
             <select id="browser" name="browser">
                 <option value="chrome">Chrome</option>
@@ -29,11 +34,16 @@
                 <option value="brave">Brave</option>
                 <option value="other">Other</option>
             </select>
+            </div>
+            <div class="column1">
             <label for="pet">Do you have a household pet?</label>
             <input type="checkbox" id="pet" name="pet">
+            </div>
+            <div>
             <label for="feedback">List the places you have lived:</label>
             <textarea id="feedback" name="feedback" rows="4" placeholder="Stillwater Florida, Amesterdam Netherlands, Tibuktu Mali"></textarea>
-       </fieldset>
+            </div>
+        </fieldset>
        <button type="submit">Submit Poll</button>
     </form>
 </main>
