--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
+    <meta name="description" content="Msebeyenjabulo Magubane, WDD130, quiz">
+    <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
