--- a/quiz.html
+++ b/quiz.html
@@ -28,9 +28,9 @@
             <label for="q3">Which HTML tag is used to define an internal style sheet?</label>
             <select id="q3" name="q3" required>
                 <option value="" selected disabled>Choose One ...</option>
-                <option value="style">&lt;style&gt;</option>
-                <option value="css">&lt;css&gt;</option>
-                <option value="script">&lt;script&gt;</option>
+                <option value="style">style</option>
+                <option value="css">css</option>
+                <option value="script">script</option>
             </select>
         </div>
 
