--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header-container">
-        <img src="images/logo.png" alt="Rafting Site Logo" class="logo">
+        <img src="images/Club Rafting Logo.png" alt="Club Rafting Site Logo" class="logo">
         <h1>The Rafting Club</h1>
         <nav class="navbar">
             <a href="index.html">Home</a>
@@ -20,7 +20,16 @@
         </nav>
     </header>
     <main>
-        
+        <h1>Contact Us</h1>
+        <h3>Address</h3>
+        <p>123 River Drive, Oakland</p>
+        <h3>Phone Number</h3>
+        <p>74837-0-7238</p>
+        <h3>Email</h3>
+        <p>theraftingclub@gmail.com</p>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
     <footer>
         <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
