--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,10 +26,23 @@
         <h3>Phone Number</h3>
         <p>74837-0-7238</p>
         <h3>Email</h3>
-        <p>theraftingclub@gmail.com</p>
+        <p>clubrafting@gmail.com</p>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <h1>Our Employees</h1>
+        <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="200">
+        <h3>Audrey</h3>
+        <img src="images/Asher.jpeg" alt="A male clubrafting employee" width="221">
+        <h3>Asher</h3>
+        <img src="images/Debby.jpeg" alt="A female clubrafting employee" width="221">
+        <h3>Kelly</h3>
+        <img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="221">
+        <h3></h3>
+        <img src="images/Matt.jpeg" alt="A male clubrafting employee" width="223">
+        <h3>Matt</h3>
+        <img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="221">
+        <h3>Shuan</h3>
     </main>
     <footer>
         <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
