--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header-container">
-        <img src="images/logo.png" alt="Rafting Site Logo" class="logo">
+        <img src="images/Club Rafting Logo.png" alt="Club Rafting Site Logo" class="logo">
         <h1>The Rafting Club</h1>
         <nav class="navbar">
             <a href="index.html">Home</a>
