contact edit six

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -43,6 +43,63 @@
         <h3>Matt</h3>
         <img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="221">
         <h3>Shuan</h3>
+
+        <h1>Send Us A Message</h1>
+        <form action="#" method="post">
+        <!-- Input 1 -->
+        <div class="form-group">
+            <label for="input1">Name:</label>
+            <input type="text" id="input1" name="input1" required>
+        </div>
+
+        <!-- Input 2 -->
+        <div class="form-group">
+            <label for="input2">Email:</label>
+            <input type="text" id="input2" name="input2" required>
+        </div>
+
+        <!-- Radio Title -->
+        <div class="form-group">
+            <label for="radio-title">Purpose of message:</label>
+        </div>
+        
+
+        <!-- Radio 1 -->
+        <div class="form-group inline-group ">
+            <input type="radio" id="radio1" name="radio1" value="general-inquiry" required>
+            <label for="radio1">General Inquiry</label>
+        </div>
+
+        <!-- Radio 2 -->
+        <div class="form-group inline-group">
+            <input type="radio" id="radio2" name="radio2" value="reservation-question" required>
+            <label for="radio2">Reservation Question</label>
+        </div>
+
+        <!-- Radio 3 -->
+        <div class="form-group inline-group">
+            <input type="radio" id="radio3" name="radio3" value="website-suggestion" required>
+            <label for="radio3">Website Suggestion</label>
+        </div>
+
+        <!-- Input 2 -->
+        <div class="form-group">
+            <label for="input2">Your message:</label>
+            <textarea id="Input2" name="Input2" rows="4" cols="50" required></textarea>
+        </div>
+
+        <!-- Checkbox -->
+        <div class="form-group inline-group">
+            <input type="checkbox" id="checkbox1" name="checkbox1" required>
+            <label for="checkbox">Please subscribe me to the monthly newsletter</label>
+        </div>
+
+        <!-- Submit Button -->
+        <div class="form-group">
+            <button type="submit">Submit Quiz</button>
+        </div>
+    </form>
+
     </main>
     <footer>
         <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
