contact edit seven

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact Club Rafting</title>
     <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting Contact Page">
     <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header-container">
-        <img src="images/Club Rafting Logo.png" alt="Club Rafting Site Logo" class="logo">
-        <h1>The Rafting Club</h1>
+        <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
+        <h1>Club Rafting</h1>
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -28,7 +28,7 @@
         <h3>Email</h3>
         <p>clubrafting@gmail.com</p>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <h1>Our Employees</h1>
         <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="200">
@@ -36,69 +36,69 @@
         <img src="images/Asher.jpeg" alt="A male clubrafting employee" width="221">
         <h3>Asher</h3>
         <img src="images/Debby.jpeg" alt="A female clubrafting employee" width="221">
-        <h3>Kelly</h3>
+        <h3>Debby</h3>
         <img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="221">
-        <h3></h3>
+        <h3>kelly</h3>
         <img src="images/Matt.jpeg" alt="A male clubrafting employee" width="223">
         <h3>Matt</h3>
         <img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="221">
         <h3>Shuan</h3>
 
         <h1>Send Us A Message</h1>
-        <form action="#" method="post">
-        <!-- Input 1 -->
-        <div class="form-group">
-            <label for="input1">Name:</label>
-            <input type="text" id="input1" name="input1" required>
-        </div>
+<form action="#" method="post">
+    <!-- Input 1 -->
+    <div class="form-group">
+        <label for="input1">Name:</label>
+        <input type="text" id="input1" name="input1" required>
+    </div>
 
-        <!-- Input 2 -->
-        <div class="form-group">
-            <label for="input2">Email:</label>
-            <input type="text" id="input2" name="input2" required>
-        </div>
+    <!-- Input 2 -->
+    <div class="form-group">
+        <label for="input2">Email:</label>
+        <input type="text" id="input2" name="input2" required>
+    </div>
 
-        <!-- Radio Title -->
-        <div class="form-group">
-            <label for="radio-title">Purpose of message:</label>
-        </div>
-        
+    <!-- Radio Title -->
+    <div class="form-group">
+        <label>Purpose of message:</label>
+    </div>
 
-        <!-- Radio 1 -->
-        <div class="form-group inline-group ">
-            <input type="radio" id="radio1" name="radio1" value="general-inquiry" required>
-            <label for="radio1">General Inquiry</label>
-        </div>
+    <!-- Radio 1 -->
+    <div class="form-group inline-group">
+        <input type="radio" id="radio1" name="purpose" value="general-inquiry" required>
+        <label for="radio1">General Inquiry</label>
+    </div>
 
-        <!-- Radio 2 -->
-        <div class="form-group inline-group">
-            <input type="radio" id="radio2" name="radio2" value="reservation-question" required>
-            <label for="radio2">Reservation Question</label>
-        </div>
+    <!-- Radio 2 -->
+    <div class="form-group inline-group">
+        <input type="radio" id="radio2" name="purpose" value="reservation-question" required>
+        <label for="radio2">Reservation Question</label>
+    </div>
 
-        <!-- Radio 3 -->
-        <div class="form-group inline-group">
-            <input type="radio" id="radio3" name="radio3" value="website-suggestion" required>
-            <label for="radio3">Website Suggestion</label>
-        </div>
+    <!-- Radio 3 -->
+    <div class="form-group inline-group">
+        <input type="radio" id="radio3" name="purpose" value="website-suggestion" required>
+        <label for="radio3">Website Suggestion</label>
+    </div>
 
-        <!-- Input 2 -->
-        <div class="form-group">
-            <label for="input2">Your message:</label>
-            <textarea id="Input2" name="Input2" rows="4" cols="50" required></textarea>
-        </div>
+    <!-- Message Input -->
+    <div class="form-group">
+        <label for="message">Your message:</label>
+        <textarea id="message" name="message" rows="4" cols="50" required></textarea>
+    </div>
 
-        <!-- Checkbox -->
-        <div class="form-group inline-group">
-            <input type="checkbox" id="checkbox1" name="checkbox1" required>
-            <label for="checkbox">Please subscribe me to the monthly newsletter</label>
-        </div>
+    <!-- Checkbox -->
+    <div class="form-group inline-group">
+        <input type="checkbox" id="checkbox1" name="newsletter" required>
+        <label for="checkbox1">Please subscribe me to the monthly newsletter</label>
+    </div>
 
-        <!-- Submit Button -->
-        <div class="form-group">
-            <button type="submit">Submit Quiz</button>
-        </div>
-    </form>
+    <!-- Submit Button -->
+    <div class="form-group">
+        <button type="submit">Submit Quiz</button>
+    </div>
+</form>
+
 
     </main>
     <footer>
@@ -114,6 +114,7 @@
                 <img src="images/Twiiter_X_Icon-64.webp" alt="Twitter">
             </a>
         </nav>
+        <a href="https://app.moqups.com/AYMmGNRXhqhWCoaWPao2SNQyX92LQFVT/view/page/a8b49fd9f">Wireframe</a>
     </footer>
 </body>
 </html>
