--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Club Rafting</title>
+    <title>Contact | Club Rafting</title>
     <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting Contact Page">
     <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/rafting.css">
