--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Club Rafting</title>
+    <title>Contact| Club Rafting</title>
     <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting Contact Page">
     <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -19,17 +19,25 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
+     <div class="hero">
+        <h1>Contact</h1>
+        <img src="path/to/your/big-image.jpg" alt="Big Image">
+    </div>
     <main>
-        <h1>Contact Us</h1>
-        <h3>Address</h3>
-        <p>123 River Drive, Oakland</p>
-        <h3>Phone Number</h3>
-        <p>74837-0-7238</p>
-        <h3>Email</h3>
-        <p>clubrafting@gmail.com</p>
+    <div class="contact-container">
+        <div class="contact-info">
+            <h2>Club Rafting Contact Information</h2>
+            <h3>Address</h3>
+            <p>123 River Road, Rapids City</p>
+            <h3>Phone Number</h3>
+            <p>(555) 123-4567</p>
+            <h3>Email</h3>
+            <p>clubrafting@gmail.com</p>
+        </div>
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+    </div>
         <h1>Our Employees</h1>
         <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="200">
         <h3>Audrey</h3>
