contact edit eight

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -21,7 +21,7 @@
     </header>
      <div class="hero">
         <h1>Contact</h1>
-        <img src="path/to/your/big-image.jpg" alt="Big Image">
+        <img src="images/people-on-a-raft-waving.jpeg" alt="People on a raft waving">
     </div>
     <main>
     <div class="contact-container">
