--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
      <div class="hero">
-        <h1>Contact</h1>
-        <img src="images/people-on-a-raft-waving.jpeg" alt="People on a raft waving">
+        <h1>Contact Us</h1>
+        <img src="images/rafting12_1024.jpg" alt="People on a raft waving">
     </div>
     <main>
     <div class="contact-container">
@@ -38,20 +38,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
-        <h1>Our Employees</h1>
-        <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="200">
-        <h3>Audrey</h3>
-        <img src="images/Asher.jpeg" alt="A male clubrafting employee" width="221">
-        <h3>Asher</h3>
-        <img src="images/Debby.jpeg" alt="A female clubrafting employee" width="221">
-        <h3>Debby</h3>
-        <img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="221">
-        <h3>kelly</h3>
-        <img src="images/Matt.jpeg" alt="A male clubrafting employee" width="223">
-        <h3>Matt</h3>
-        <img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="221">
-        <h3>Shuan</h3>
-
+        
         <h1>Send Us A Message</h1>
 <form action="#" method="post">
     <!-- Input 1 -->
@@ -106,6 +93,20 @@
         <button type="submit">Submit Quiz</button>
     </div>
 </form>
+
+<h1>Our Employees</h1>
+<img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="200">
+<h3>Audrey</h3>
+<img src="images/Asher.jpeg" alt="A male clubrafting employee" width="221">
+<h3>Asher</h3>
+<img src="images/Debby.jpeg" alt="A female clubrafting employee" width="221">
+<h3>Debby</h3>
+<img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="221">
+<h3>kelly</h3>
+<img src="images/Matt.jpeg" alt="A male clubrafting employee" width="223">
+<h3>Matt</h3>
+<img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="221">
+<h3>Shuan</h3>
 
 
     </main>
