--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -94,20 +94,40 @@
     </div>
 </form>
 
-<h1>Our Employees</h1>
-<img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="200">
-<h3>Audrey</h3>
-<img src="images/Asher.jpeg" alt="A male clubrafting employee" width="221">
-<h3>Asher</h3>
-<img src="images/Debby.jpeg" alt="A female clubrafting employee" width="221">
-<h3>Debby</h3>
-<img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="221">
-<h3>kelly</h3>
-<img src="images/Matt.jpeg" alt="A male clubrafting employee" width="223">
-<h3>Matt</h3>
-<img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="221">
-<h3>Shuan</h3>
 
+<div class="employee-container">
+    <h1>Our Employees</h1>
+    <div class="employee">
+        <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="185">
+        <h3>Audrey</h3>
+        <p>Manager</p>
+    </div>
+    <div class="employee">
+        <img src="images/Asher.jpeg" alt="A male clubrafting employee" width="200">
+        <h3>Asher</h3>
+        <p>Instructor</p>
+    </div>
+    <div class="employee">
+        <img src="images/Debby.jpeg" alt="A female clubrafting employee" width="200">
+        <h3>Debby</h3>
+        <p>Guide</p>
+    </div>
+    <div class="employee">
+        <img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="200">
+        <h3>Kelly</h3>
+        <p>Coordinator</p>
+    </div>
+    <div class="employee">
+        <img src="images/Matt.jpeg" alt="A male clubrafting employee" width="200">
+        <h3>Matt</h3>
+        <p>Guide</p>
+    </div>
+    <div class="employee">
+        <img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="200">
+        <h3>Shuan</h3>
+        <p>Photographer</p>
+    </div>
+</div>
 
     </main>
     <footer>
