club raftiing edits one

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact| Club Rafting</title>
+    <title>Contact | Club Rafting</title>
     <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting Contact Page">
     <meta name="author" content="Msebeyenjabulo Magubane">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -11,7 +11,7 @@
 <body>
     <header class="header-container">
         <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
-        <h1>Club Rafting</h1>
+        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -134,13 +134,13 @@
         <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
-                <img src="images/BW_Facebook_Icon_glyph_svg-64.webp" alt="Facebook">
+                <img src="images/Facebook_ Icon.webp" alt="Facebook">
             </a>
             <a href="https://instagram.com">
-                <img src="images/Circled_Instagram_Icon_svg-64.webp" alt="instagram">
+                <img src="images/Instagram_Icon.webp" alt="instagram">
             </a>
             <a href="https://twitter.com">
-                <img src="images/Twiiter_X_Icon-64.webp" alt="Twitter">
+                <img src="images/Twiiter_X_ Icon.webp" alt="Twitter">
             </a>
         </nav>
         <a href="https://app.moqups.com/AYMmGNRXhqhWCoaWPao2SNQyX92LQFVT/view/page/a8b49fd9f">Wireframe</a>
