--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header-container">
         <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
-        <h1>Club Rafting</h1>
+        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -32,17 +32,17 @@
         <section class="trip-details">
             <div class="trip">
                 <img src="images/rafting12_1024.jpg" alt="Exciting Rafting Trip 1">
-                <h2>Exciting Rafting Trip 1</h2>
+                <h2>Exciting Rafting Trip</h2>
                 <p>Join us for an exhilarating adventure on one of the most exciting rivers. Perfect for thrill-seekers.</p>
             </div>
             <div class="trip">
                 <img src="images/rafting-in-blue-waters.jpeg" alt="Scenic Rafting Trip 2">
-                <h2>Scenic Rafting Trip 2</h2>
+                <h2>Scenic Rafting Trip</h2>
                 <p>Enjoy a scenic rafting trip with breathtaking views and tranquil waters. Ideal for a relaxing day out.</p>
             </div>
             <div class="trip">
                 <img src="images/boys-on-a-raft-smiling.jpeg" alt="Family Rafting Trip 3">
-                <h2>Family Rafting Trip 3</h2>
+                <h2>Family Rafting Trip</h2>
                 <p>Our family-friendly trip offers fun and excitement for all ages. A great way to bond with loved ones.</p>
             </div>
         </section>
@@ -61,21 +61,21 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Exciting Rafting Trip 1</td>
+                        <td>Exciting Rafting Trip</td>
                         <td>Adventure River</td>
                         <td>5 Days</td>
                         <td>$800</td>
                         <td><a href="contact.html">Contact Us</a></td>
                     </tr>
                     <tr>
-                        <td>Scenic Rafting Trip 2</td>
+                        <td>Scenic Rafting Trip</td>
                         <td>Tranquil Waters</td>
                         <td>3 Days</td>
                         <td>$500</td>
                         <td><a href="contact.html">Contact Us</a></td>
                     </tr>
                     <tr>
-                        <td>Family Rafting Trip 3</td>
+                        <td>Family Rafting Trip</td>
                         <td>Family Fun River</td>
                         <td>2 Days</td>
                         <td>$300</td>
@@ -88,9 +88,9 @@
     <footer>
         <p>©️2024 | Rafting Site Document | Msebeyenjabulo Magubane | WDD 130</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com"><img src="images/BW_Facebook_Icon_glyph_svg-64.webp" alt="Facebook"></a>
-            <a href="https://instagram.com"><img src="images/Circled_Instagram_Icon_svg-64.webp" alt="Instagram"></a>
-            <a href="https://twitter.com"><img src="images/Twiiter_X_Icon-64.webp" alt="Twitter"></a>
+            <a href="https://facebook.com"><img src="images/Facebook_ Icon.webp" alt="Facebook"></a>
+            <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
+            <a href="https://twitter.com"><img src="images/Twiiter_X_ Icon.webp" alt="Twitter"></a>
         </nav>
         <a href="images/trips-wireframe.png">Wireframe</a>
     </footer>
