--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-container">
         <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
-        <h1>The Rafting Club</h1>
+        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -21,7 +21,8 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/rafting-div-background.jpg" alt="The rafting Club Employees" width="600">
+            <!--<img src="images/rafting-div-background.jpg" alt="The rafting Club Employees" width="600">-->
+        
             <article>
                 <img src="images/rafting5_1024.jpg" alt="Happy clients rafting with employees">
                 <p>Welcome to The Rafting Club, where we believe that whitewater rafting is more than just a thrilling activity—it's an opportunity to connect with nature, challenge yourself, and create lifelong memories with friends and family. At The Rafting Club, our mission is to offer top-notch rafting experiences. We strive to be the preferred choice for thrill-seekers and nature lovers alike, providing a safe and supportive environment that encourages fun and a deep appreciation for the outdoors.</p>
@@ -59,13 +60,13 @@
         <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
-                <img src="images/BW_Facebook_Icon_glyph_svg-64.webp" alt="Facebook">
+                <img src="images/Facebook_ Icon.webp" alt="Facebook">
             </a>
             <a href="https://instagram.com">
-                <img src="images/Circled_Instagram_Icon_svg-64.webp" alt="instagram">
+                <img src="images/Instagram_Icon.webp" alt="instagram">
             </a>
             <a href="https://twitter.com">
-                <img src="images/Twiiter_X_Icon-64.webp" alt="Twitter">
+                <img src="images/Twiiter_X_ Icon.webp" alt="Twitter">
             </a>
         </nav>
     </footer>
