--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rafting Club - Home</title>
-    <link rel="stylesheet" href="rafting.css">
+    <title>Home | Club Rafting</title>
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header-container">
         <div class="logo">
-            <img src="images/logo.png" alt="The Rafting Club Logo">
+            <img src="images/ClubRaftingLogo.png" alt="The Rafting Club Logo">
         </div>
-        <h1>The Rafting Club</h1>
+        <h1>Club Rafting</h1>
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="trips.html">Trips</a>
@@ -20,7 +20,7 @@
     </header>
 
     <div class="hero">
-        <img src="images/hero.jpg" alt="Rafting Adventure">
+        <img src="images/pexels-hilmiisilak-3.jpg" alt="Rafting Adventure">
         <h2>Join Us for an Unforgettable Adventure</h2>
     </div>
 
@@ -40,11 +40,11 @@
 
     <section class="content-grid">
         <div class="grid-item">
-            <img src="images/rafting1.jpg" alt="Rafting Experience">
+            <img src="images/pexels-hilmiisilak-1.jpg" alt="Rafting Experience">
             <p>Experience the thrill of white water rafting with our expert guides.</p>
         </div>
         <div class="grid-item">
-            <img src="images/rafting2.jpg" alt="Family Adventure">
+            <img src="images/pexels-hilmiisilak-2.jpg" alt="Family Adventure">
             <p>Perfect for family adventures and group outings.</p>
         </div>
     </section>
