club rafting edits

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting About Page">
-    <meta name="author" content="Msebeyenjabulo Magubane">
+    <title>About Us | Club Rafting</title>
+    <meta name="description" content="Learn more about Club Rafting and our mission to provide thrilling rafting adventures.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header-container">
         <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
-        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -20,55 +18,37 @@
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <!--<img src="images/rafting-div-background.jpg" alt="The rafting Club Employees" width="600">-->
-        
-            <article>
-                <img src="images/rafting5_1024.jpg" alt="Happy clients rafting with employees">
-                <p>Welcome to The Rafting Club, where we believe that whitewater rafting is more than just a thrilling activity—it's an opportunity to connect with nature, challenge yourself, and create lifelong memories with friends and family. At The Rafting Club, our mission is to offer top-notch rafting experiences. We strive to be the preferred choice for thrill-seekers and nature lovers alike, providing a safe and supportive environment that encourages fun and a deep appreciation for the outdoors.</p>
-            </article>
-        </div>
+        <section class="hero">
+            <img src="images/about-hero.jpg" alt="About Us">
+            <h1>About Us</h1>
+        </section>
         <section class="history">
-            <h2>History</h2>
-            <p>The Rafting Club was founded in 1999 by a group of passionate adventurers who sought to share their love of whitewater rafting with the world. What began as a small, tight-knit team of thrill-seekers has since evolved into a thriving community of adventure enthusiasts and experienced guides.</p>
+            <h2>Our History</h2>
+            <p>Club Rafting was founded in 2000 with the goal of providing thrilling and safe rafting experiences...</p>
         </section>
         <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="images/rafting55_1024.jpg" alt="Rafters rafting in a blue watered river" width="200">
-                <figcaption>Los Dientes del Diablo</figcaption>
+                <img src="images/adventure1.jpg" alt="Adventure 1">
+                <figcaption>Adventure Awaits</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting11_1024.jpg" alt="Rafters rafting in calm waters" width="200">
-                <figcaption>Big Mallard</figcaption>
+                <img src="images/adventure2.jpg" alt="Adventure 2">
+                <figcaption>Join the Fun</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting53_600.jpg" alt="A group of rafters rafting through a strong river" width="200">
-                <figcaption>Half Day Adventure</figcaption>
-            </figure>
-            <figure>
-                <img src="images/rafting34_1024.jpg" alt="A group of rafters rafting past a forest" width="200">
-                <figcaption>Forest Run</figcaption>
-            </figure>
-            <figure>
-                <img src="images/rafting7_600.jpg" alt="Kids rafting with our team" width="200">
-                <figcaption>Family Fun</figcaption>
+                <img src="images/adventure3.jpg" alt="Adventure 3">
+                <figcaption>Family Adventures</figcaption>
             </figure>
         </section>
     </main>
     <footer>
-        <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
+        <p>©️2024 | Club Rafting | Msebeyenjabulo Magubane | WDD 130</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/Facebook_ Icon.webp" alt="Facebook">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/Instagram_Icon.webp" alt="instagram">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/Twiiter_X_ Icon.webp" alt="Twitter">
-            </a>
+            <a href="https://facebook.com"><img src="images/Facebook_Icon.webp" alt="Facebook"></a>
+            <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
+            <a href="https://twitter.com"><img src="images/Twitter_X_Icon.webp" alt="Twitter"></a>
         </nav>
+        <a href="images/about-wireframe.png" class="wireframe-link">Wireframe</a>
     </footer>
 </body>
 </html>
