--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -10,7 +10,6 @@
 <body>
     <header class="header-container">
         <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
-        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -20,15 +19,13 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Our Trips</h1>
             <img src="images/rafting11_1024_copy.jpg" alt="Rafting Adventure">
+            <h1>Our Trips</h1>
         </section>
-
         <section class="call-to-action">
             <p>Contact us to book your next adventure!</p>
             <a href="contact.html" class="cta-button">Contact Us</a>
         </section>
-
         <section class="trip-details">
             <div class="trip">
                 <img src="images/rafting12_1024.jpg" alt="Exciting Rafting Trip 1">
@@ -46,7 +43,6 @@
                 <p>Our family-friendly trip offers fun and excitement for all ages. A great way to bond with loved ones.</p>
             </div>
         </section>
-
         <section class="trip-table">
             <h2>Available Trips</h2>
             <table>
@@ -76,23 +72,23 @@
                     </tr>
                     <tr>
                         <td>Family Rafting Trip</td>
-                        <td>Family Fun River</td>
+                        <td>Family River</td>
                         <td>2 Days</td>
-                        <td>$300</td>
-                        <td><a href="contact.html">Contact Us</td>
+                        <td>$400</td>
+                        <td><a href="contact.html">Contact Us</a></td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
     <footer>
-        <p>©️2024 | Rafting Site Document | Msebeyenjabulo Magubane | WDD 130</p>
+        <p>©️2024 | Club Rafting | Msebeyenjabulo Magubane | WDD 130</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com"><img src="images/Facebook_ Icon.webp" alt="Facebook"></a>
+            <a href="https://facebook.com"><img src="images/Facebook_Icon.webp" alt="Facebook"></a>
             <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
-            <a href="https://twitter.com"><img src="images/Twiiter_X_ Icon.webp" alt="Twitter"></a>
+            <a href="https://twitter.com"><img src="images/Twitter_X_Icon.webp" alt="Twitter"></a>
         </nav>
-        <a href="images/trips-wireframe.png">Wireframe</a>
+        <a href="images/trips-wireframe.png" class="wireframe-link">Wireframe</a>
     </footer>
 </body>
 </html>
