--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Club Rafting</title>
-    <meta name="description" content="Msebeyenjabulo Magubane, WDD130, Rafting Contact Page">
-    <meta name="author" content="Msebeyenjabulo Magubane">
+    <title>Trips | Club Rafting</title>
+    <meta name="description" content="Explore the thrilling trips and adventures offered by Club Rafting. Discover our exciting rafting packages and book your adventure today.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header-container">
         <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
-        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -19,131 +17,78 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-     <div class="hero">
-        <h1>Contact Us</h1>
-        <img src="images/rafting12_1024.jpg" alt="People on a raft waving">
-    </div>
     <main>
-    <div class="contact-container">
-        <div class="contact-info">
-            <h2>Club Rafting Contact Information</h2>
-            <h3>Address</h3>
-            <p>123 River Road, Rapids City</p>
-            <h3>Phone Number</h3>
-            <p>(555) 123-4567</p>
-            <h3>Email</h3>
-            <p>clubrafting@gmail.com</p>
-        </div>
-        <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7121212.200163437!2d22.789825699999987!3d-29.365768199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef356acf0d3d33b%3A0xa46b46a09d234b11!2sOrange%20River!5e0!3m2!1sen!2sza!4v1716639448967!5m2!1sen!2sza" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
-        
-        <h1>Send Us A Message</h1>
-<form action="#" method="post">
-    <!-- Input 1 -->
-    <div class="form-group">
-        <label for="input1">Name:</label>
-        <input type="text" id="input1" name="input1" required>
-    </div>
-
-    <!-- Input 2 -->
-    <div class="form-group">
-        <label for="input2">Email:</label>
-        <input type="text" id="input2" name="input2" required>
-    </div>
-
-    <!-- Radio Title -->
-    <div class="form-group">
-        <label>Purpose of message:</label>
-    </div>
-
-    <!-- Radio 1 -->
-    <div class="form-group inline-group">
-        <input type="radio" id="radio1" name="purpose" value="general-inquiry" required>
-        <label for="radio1">General Inquiry</label>
-    </div>
-
-    <!-- Radio 2 -->
-    <div class="form-group inline-group">
-        <input type="radio" id="radio2" name="purpose" value="reservation-question" required>
-        <label for="radio2">Reservation Question</label>
-    </div>
-
-    <!-- Radio 3 -->
-    <div class="form-group inline-group">
-        <input type="radio" id="radio3" name="purpose" value="website-suggestion" required>
-        <label for="radio3">Website Suggestion</label>
-    </div>
-
-    <!-- Message Input -->
-    <div class="form-group">
-        <label for="message">Your message:</label>
-        <textarea id="message" name="message" rows="4" cols="50" required></textarea>
-    </div>
-
-    <!-- Checkbox -->
-    <div class="form-group inline-group">
-        <input type="checkbox" id="checkbox1" name="newsletter" required>
-        <label for="checkbox1">Please subscribe me to the monthly newsletter</label>
-    </div>
-
-    <!-- Submit Button -->
-    <div class="form-group">
-        <button type="submit">Submit Quiz</button>
-    </div>
-</form>
-
-
-<div class="employee-container">
-    <h1>Our Employees</h1>
-    <div class="employee">
-        <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="185">
-        <h3>Audrey</h3>
-        <p>Manager</p>
-    </div>
-    <div class="employee">
-        <img src="images/Asher.jpeg" alt="A male clubrafting employee" width="200">
-        <h3>Asher</h3>
-        <p>Instructor</p>
-    </div>
-    <div class="employee">
-        <img src="images/Debby.jpeg" alt="A female clubrafting employee" width="200">
-        <h3>Debby</h3>
-        <p>Guide</p>
-    </div>
-    <div class="employee">
-        <img src="images/Kelly.jpeg" alt="A female clubrafting employee" width="200">
-        <h3>Kelly</h3>
-        <p>Coordinator</p>
-    </div>
-    <div class="employee">
-        <img src="images/Matt.jpeg" alt="A male clubrafting employee" width="200">
-        <h3>Matt</h3>
-        <p>Guide</p>
-    </div>
-    <div class="employee">
-        <img src="images/Shuan.jpeg" alt="A male clubrafting employee" width="200">
-        <h3>Shuan</h3>
-        <p>Photographer</p>
-    </div>
-</div>
-
+        <section class="hero">
+            <img src="images/rafting11_1024_copy.jpg" alt="Rafting Adventure">
+            <h1>Our Trips</h1>
+        </section>
+        <section class="call-to-action">
+            <p>Contact us to book your next adventure!</p>
+            <a href="contact.html" class="cta-button">Contact Us</a>
+        </section>
+        <section class="trip-details">
+            <div class="trip">
+                <img src="images/rafting12_1024.jpg" alt="Exciting Rafting Trip 1">
+                <h2>Exciting Rafting Trip</h2>
+                <p>Join us for an exhilarating adventure on one of the most exciting rivers. Perfect for thrill-seekers.</p>
+            </div>
+            <div class="trip">
+                <img src="images/rafting-in-blue-waters.jpeg" alt="Scenic Rafting Trip 2">
+                <h2>Scenic Rafting Trip</h2>
+                <p>Enjoy a scenic rafting trip with breathtaking views and tranquil waters. Ideal for a relaxing day out.</p>
+            </div>
+            <div class="trip">
+                <img src="images/boys-on-a-raft-smiling.jpeg" alt="Family Rafting Trip 3">
+                <h2>Family Rafting Trip</h2>
+                <p>Our family-friendly trip offers fun and excitement for all ages. A great way to bond with loved ones.</p>
+            </div>
+        </section>
+        <section class="trip-table">
+            <h2>Available Trips</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Trip Name</th>
+                        <th>Location</th>
+                        <th>Duration</th>
+                        <th>Price</th>
+                        <th>Contact</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Exciting Rafting Trip</td>
+                        <td>Adventure River</td>
+                        <td>5 Days</td>
+                        <td>$800</td>
+                        <td><a href="contact.html">Contact Us</a></td>
+                    </tr>
+                    <tr>
+                        <td>Scenic Rafting Trip</td>
+                        <td>Tranquil Waters</td>
+                        <td>3 Days</td>
+                        <td>$500</td>
+                        <td><a href="contact.html">Contact Us</a></td>
+                    </tr>
+                    <tr>
+                        <td>Family Rafting Trip</td>
+                        <td>Family River</td>
+                        <td>2 Days</td>
+                        <td>$400</td>
+                        <td><a href="contact.html">Contact Us</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer>
-        <p>©️2024 | Rafting Site Document| Msebeyenjabulo Magubane | WDD 130</p>
+        <p>©️2024 | Club Rafting | Msebeyenjabulo Magubane | WDD 130</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/Facebook_ Icon.webp" alt="Facebook">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/Instagram_Icon.webp" alt="instagram">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/Twiiter_X_ Icon.webp" alt="Twitter">
-            </a>
+            <a href="https://facebook.com"><img src="images/Facebook_Icon.webp" alt="Facebook"></a>
+            <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
+            <a href="https://twitter.com"><img src="images/Twitter_X_Icon.webp" alt="Twitter"></a>
         </nav>
-        <a href="https://app.moqups.com/AYMmGNRXhqhWCoaWPao2SNQyX92LQFVT/view/page/a8b49fd9f">Wireframe</a>
+        <a href="images/trips-wireframe.png" class="wireframe-link">Wireframe</a>
     </footer>
 </body>
 </html>
