club rafting edits

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trips | Club Rafting</title>
-    <meta name="description" content="Explore the thrilling trips and adventures offered by Club Rafting. Discover our exciting rafting packages and book your adventure today.">
+    <title>Contact Us | Club Rafting</title>
+    <meta name="description" content="Get in touch with Club Rafting for more information about our trips and services. We look forward to hearing from you.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -19,66 +19,25 @@
     </header>
     <main>
         <section class="hero">
-            <img src="images/rafting11_1024_copy.jpg" alt="Rafting Adventure">
-            <h1>Our Trips</h1>
+            <img src="images/contact-hero.jpg" alt="Contact Us">
+            <h1>Contact Us</h1>
         </section>
-        <section class="call-to-action">
-            <p>Contact us to book your next adventure!</p>
-            <a href="contact.html" class="cta-button">Contact Us</a>
-        </section>
-        <section class="trip-details">
-            <div class="trip">
-                <img src="images/rafting12_1024.jpg" alt="Exciting Rafting Trip 1">
-                <h2>Exciting Rafting Trip</h2>
-                <p>Join us for an exhilarating adventure on one of the most exciting rivers. Perfect for thrill-seekers.</p>
+        <section class="contact-container">
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+            <div class="contact-info">
+                <h2>Get in Touch</h2>
+                <p>Email: info@clubrafting.com</p>
+                <p>Phone: +123 456 7890</p>
+                <p>Address: 123 Adventure Lane, Rafting City, Country</p>
             </div>
-            <div class="trip">
-                <img src="images/rafting-in-blue-waters.jpeg" alt="Scenic Rafting Trip 2">
-                <h2>Scenic Rafting Trip</h2>
-                <p>Enjoy a scenic rafting trip with breathtaking views and tranquil waters. Ideal for a relaxing day out.</p>
-            </div>
-            <div class="trip">
-                <img src="images/boys-on-a-raft-smiling.jpeg" alt="Family Rafting Trip 3">
-                <h2>Family Rafting Trip</h2>
-                <p>Our family-friendly trip offers fun and excitement for all ages. A great way to bond with loved ones.</p>
-            </div>
-        </section>
-        <section class="trip-table">
-            <h2>Available Trips</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Trip Name</th>
-                        <th>Location</th>
-                        <th>Duration</th>
-                        <th>Price</th>
-                        <th>Contact</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Exciting Rafting Trip</td>
-                        <td>Adventure River</td>
-                        <td>5 Days</td>
-                        <td>$800</td>
-                        <td><a href="contact.html">Contact Us</a></td>
-                    </tr>
-                    <tr>
-                        <td>Scenic Rafting Trip</td>
-                        <td>Tranquil Waters</td>
-                        <td>3 Days</td>
-                        <td>$500</td>
-                        <td><a href="contact.html">Contact Us</a></td>
-                    </tr>
-                    <tr>
-                        <td>Family Rafting Trip</td>
-                        <td>Family River</td>
-                        <td>2 Days</td>
-                        <td>$400</td>
-                        <td><a href="contact.html">Contact Us</a></td>
-                    </tr>
-                </tbody>
-            </table>
         </section>
     </main>
     <footer>
@@ -88,7 +47,7 @@
             <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
             <a href="https://twitter.com"><img src="images/Twitter_X_Icon.webp" alt="Twitter"></a>
         </nav>
-        <a href="images/trips-wireframe.png" class="wireframe-link">Wireframe</a>
+        <a href="images/contact-wireframe.png" class="wireframe-link">Wireframe</a>
     </footer>
 </body>
 </html>
