club rafting edits

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,18 +27,18 @@
             <p>Club Rafting was founded in 2000 with the goal of providing thrilling and safe rafting experiences...</p>
         </section>
         <section class="adventures">
-            <figure>
+            <div class="grid-item">
                 <img src="images/adventure1.jpg" alt="Adventure 1">
-                <figcaption>Adventure Awaits</figcaption>
-            </figure>
-            <figure>
+                <p>Adventure Awaits</p>
+            </div>
+            <div class="grid-item">
                 <img src="images/adventure2.jpg" alt="Adventure 2">
-                <figcaption>Join the Fun</figcaption>
-            </figure>
-            <figure>
+                <p>Join the Fun</p>
+            </div>
+            <div class="grid-item">
                 <img src="images/adventure3.jpg" alt="Adventure 3">
-                <figcaption>Family Adventures</figcaption>
-            </figure>
+                <p>Family Adventures</p>
+            </div>
         </section>
     </main>
     <footer>
@@ -48,7 +48,4 @@
             <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
             <a href="https://twitter.com"><img src="images/Twitter_X_Icon.webp" alt="Twitter"></a>
         </nav>
-        <a href="images/about-wireframe.png" class="wireframe-link">Wireframe</a>
-    </footer>
-</body>
-</html>
+        <a href="images/about-wireframe.png" class="wire
