--- a/wwr/index.html
+++ b/wwr/index.html
@@ -31,7 +31,7 @@
         </section>
         <section class="cta">
             <h3>Join Us for an Adventure</h3>
-            <a href="trips.html">View Our Trips</a>
+            <a href="trips.html" class="cta-button">View Our Trips</a>
         </section>
         <section class="content-grid">
             <div class="grid-item">
